--- a/main.html
+++ b/main.html
@@ -11,7 +11,13 @@
 <header>
 		<h1>The Shawshank Redemption</h1>
 	</header>
-	<nav>
+	<nav id="nav-actor">
+		<ul>
+			<li><a href="#nav-actor">Actors</a></li>
+			<li><a href="#nav-quote">Quotes</a></li>
+		</ul>
+	</nav>
+	<nav id="nav-quote">
 		<ul>
 			<li><a href="#nav-actor">Actors</a></li>
 			<li><a href="#nav-quote">Quotes</a></li>
