--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 <header>
-		<h1>The Shawshank Redemption</h1>
+		The Shawshank Redemption
 	</header>
 	<nav id="nav-actor">
 		<ul>
@@ -17,33 +17,19 @@
 			<li><a href="#nav-quote">Quotes</a></li>
 		</ul>
 	</nav>
-	<nav id="nav-quote">
-		<ul>
-			<li><a href="#nav-actor">Actors</a></li>
-			<li><a href="#nav-quote">Quotes</a></li>
-		</ul>
-	</nav>
 	<summary id="summary">
-		<h2>Summary</h2>
-		<p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
+Two imprisone solace and eventual redemption through acts of common decency
 	</summary>
 	<section id="actor">
-		<h2>Actors</h2>
-		<ul>
-			<li>Tim Robbins as Andy Dufresne</li>
-			<li>Morgan Freeman as Red</li>
-		</ul>
-	</section>
-	<section id="quote">
-		<h2>Quote</h2>
-		<p>"Get busy living, or get busy dying."</p>
+		Actors
+		
 	</section>
 	<aside>
-		<h2>IMDb Rating: 9.2/10</h2>
-		<p>Release Date: September 23, 1994</p>
+	
+		Release Date: September 23, 1998
 	</aside>
 	<footer>
-		<p>Produced by: Niki Marvin</p>
+		Produced by: Niki Marvin
 	</footer>
 
     <script type="text/javascript" src="./script.js">
