--- a/main.html
+++ b/main.html
@@ -9,28 +9,39 @@
 <body>
 	<!-- the entire body must be written by student -->
 <header>
-		The Shawshank Redemption
+		<h1>The Shawshank Redemption</h1>
 	</header>
-	<nav id="nav-actor">
+	<nav>
 		<ul>
-			<li><a href="#nav-actor">Actors</a></li>
-			<li><a href="#nav-quote">Quotes</a></li>
+			<li><a href="#actor">Actors</a></li>
+			<li><a href="#quote">Quotes</a></li>
 		</ul>
 	</nav>
-	<summary id="summary">
-Two imprisone solace and eventual redemption through acts of common decency
-	</summary>
+	<section id="summary">
+		<h2>Summary</h2>
+		<p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
+	</section>
 	<section id="actor">
-		Actors
-		
+		<h2>Actors</h2>
+		<ul>
+			<li>Tim Robbins as Andy Dufresne</li>
+			<li>Morgan Freeman as Red</li>
+			<li>Bob Gunton as Warden Norton</li>
+			<li>William Sadler as Heywood</li>
+		</ul>
+	</section>
+	<section id="quote">
+		<h2>Quote</h2>
+		<p>"Get busy living, or get busy dying."</p>
 	</section>
 	<aside>
-	
-		Release Date: September 23, 1998
+		<h2>IMDb Rating: 9.2/10</h2>
+		<p>Release Date: September 23, 1994</p>
 	</aside>
 	<footer>
-		Produced by: Niki Marvin
+		<p>Produced by: Frank Darabont</p>
 	</footer>
+
 
     <script type="text/javascript" src="./script.js">
 </script>
