--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <header>
 		<h1>The Shawshank Redemption</h1>
 	</header>
-	<nav>
+	<nav id="nav-actor" id="nav-quote">
 		<ul>
 			<li><a href="#actor">Actors</a></li>
 			<li><a href="#quote">Quotes</a></li>
@@ -35,8 +35,10 @@
 		<p>"Get busy living, or get busy dying."</p>
 	</section>
 	<aside>
-		<h2>IMDb Rating: 9.2/10</h2>
-		<p>Release Date: September 23, 1994</p>
+		    <h2>Additional Info</h2>
+    <p>IMDb Rating: 9.2/10</p>
+    <p>Release Date: September 23, 1994</p>
+
 	</aside>
 	<footer>
 		<p>Produced by: Frank Darabont</p>
