--- a/main.html
+++ b/main.html
@@ -1,53 +1,49 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Your Favorite Movie</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-<header>
-		<h1>The Shawshank Redemption</h1>
-	</header>
-	<nav id="nav-actor" id="nav-quote">
-		<ul>
-			<li><a href="#actor">Actors</a></li>
-			<li><a href="#quote">Quotes</a></li>
-		</ul>
-	</nav>
-	<section id="summary">
-		<h2>Summary</h2>
-		<p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
-	</section>
-	<section id="actor">
-		<h2>Actors</h2>
-		<ul>
-			<li>Tim Robbins as Andy Dufresne</li>
-			<li>Morgan Freeman as Red</li>
-			<li>Bob Gunton as Warden Norton</li>
-			<li>William Sadler as Heywood</li>
-		</ul>
-	</section>
-	<section id="quote">
-		<h2>Quote</h2>
-		<p>"Get busy living, or get busy dying."</p>
-	</section>
-	<aside>
-		    <h2>Additional Info</h2>
-    <p>IMDb Rating: 9.2/10</p>
-    <p>Release Date: September 23, 1994</p>
+    <header>
+        <h1>The Shawshank Redemption</h1>
+    </header>
 
-	</aside>
-	<footer>
-		<p>Produced by: Frank Darabont</p>
-	</footer>
+    <nav>
+        <ul>
+            <li><a href="#actor">Actors</a></li>
+            <li><a href="#quote">Quotes</a></li>
+        </ul>
+    </nav>
 
+    <section id="summary">
+        <h2>Summary</h2>
+        <p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
+    </section>
 
-    <script type="text/javascript" src="./script.js">
-</script>
+    <section id="actor">
+        <h2>Actors</h2>
+        <ul>
+            <li>Tim Robbins as Andy Dufresne</li>
+            <li>Morgan Freeman as Red</li>
+        </ul>
+    </section>
 
+    <section id="quote">
+        <h2>Quote</h2>
+        <p>"Get busy living, or get busy dying."</p>
+    </section>
+
+    <aside>
+        <h2>Additional Info</h2>
+        <p>IMDb Rating: 9.2/10</p>
+        <p>Release Date: September 23, 1994</p>
+    </aside>
+
+    <footer>
+        <p>Produced by: Frank Darabont</p>
+    </footer>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
