--- a/main.html
+++ b/main.html
@@ -10,29 +10,18 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="#actor">Actors</a></li>
-            <li><a href="#quote">Quotes</a></li>
-        </ul>
-    </nav>
+    <ul>
+        <li><a id="nav-actor" href="#actor">Actors</a></li>
+        <li><a id="nav-quote" href="#quote">Quotes</a></li>
+    </ul>
+</nav>
 
-    <section id="summary">
-        <h2>Summary</h2>
-        <p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
-    </section>
 
-    <section id="actor">
-        <h2>Actors</h2>
-        <ul>
-            <li>Tim Robbins as Andy Dufresne</li>
-            <li>Morgan Freeman as Red</li>
-        </ul>
-    </section>
+  <section id="summary">
+    <h2>Summary</h2>
+    <p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
+</section>
 
-    <section id="quote">
-        <h2>Quote</h2>
-        <p>"Get busy living, or get busy dying."</p>
-    </section>
 
     <aside>
         <h2>Additional Info</h2>
@@ -40,9 +29,9 @@
         <p>Release Date: September 23, 1994</p>
     </aside>
 
-    <footer>
-        <p>Produced by: Frank Darabont</p>
-    </footer>
+<footer>
+    <p>Produced by: Frank Darabont</p>
+</footer>
 
     <script type="text/javascript" src="./script.js"></script>
 </body>
