--- a/main.html
+++ b/main.html
@@ -11,9 +11,8 @@
 
     <nav>
     <ul>
-        <li><a id="nav-actor" href="#actor">Actors</a></li>
-        <li><a id="nav-quote" href="#quote">Quotes</a></li>
-    </ul>
+        <a id="nav-actor" href="#actor">Actors</a>
+        <a id="nav-quote" href="#quote">Quotes</a>
 </nav>
 
 
