--- a/main.html
+++ b/main.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Your Favorite Movie</title>
-    <link rel="stylesheet" href="styles.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>The Shawshank Redemption</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 20px;
+		}
+		nav ul {
+			list-style: none;
+			padding: 0;
+		}
+		nav ul li {
+			display: inline;
+			margin-right: 20px;
+		}
+		aside {
+			background-color: #f0f0f0;
+			padding: 10px;
+			border: 1px solid #ddd;
+		}
+	</style>
 </head>
 <body>
-    <header>
-        <h1>The Shawshank Redemption</h1>
-    </header>
-
-    <nav>
-    <ul>
-        <a id="nav-actor" href="#actor">Actors</a>
-        <a id="nav-quote" href="#quote">Quotes</a>
-</nav>
-
-
-  <section id="summary">
-    <h2>Summary</h2>
-    <p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
-</section>
-
-
-    <aside>
-        <h2>Additional Info</h2>
-        <p>IMDb Rating: 9.2/10</p>
-        <p>Release Date: September 23, 1994</p>
-    </aside>
-
-<footer>
-    <p>Produced by: Frank Darabont</p>
-</footer>
-
-    <script type="text/javascript" src="./script.js"></script>
+	<header>
+		<h1>The Shawshank Redemption</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="#nav-actor">Actors</a></li>
+			<li><a href="#nav-quote">Quotes</a></li>
+		</ul>
+	</nav>
+	<section id="summary">
+		<h2>Summary</h2>
+		<p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
+	</section>
+	<section id="actor">
+		<h2>Actors</h2>
+		<ul>
+			<li>Tim Robbins as Andy Dufresne</li>
+			<li>Morgan Freeman as Red</li>
+			<li>Bob Gunton as Warden Norton</li>
+		</ul>
+	</section>
+	<section id="quote">
+		<h2>Quote</h2>
+		<p>"Get busy living, or get busy dying."</p>
+	</section>
+	<aside>
+		<h2>IMDb Rating: 9.2/10</h2>
+		<p>Release Date: September 23, 1994</p>
+	</aside>
+	<footer>
+		<p>Produced by: Frank Darabont</p>
+	</footer>
 </body>
 </html>
