--- a/main.html
+++ b/main.html
@@ -34,10 +34,10 @@
 			<li><a href="#nav-quote">Quotes</a></li>
 		</ul>
 	</nav>
-	<section id="summary">
+	<summary id="summary">
 		<h2>Summary</h2>
 		<p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
-	</section>
+	</summary>
 	<section id="actor">
 		<h2>Actors</h2>
 		<ul>
