--- a/main.html
+++ b/main.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>The Shawshank Redemption</title>
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			margin: 20px;
-		}
-		nav ul {
-			list-style: none;
-			padding: 0;
-		}
-		nav ul li {
-			display: inline;
-			margin-right: 20px;
-		}
-		aside {
-			background-color: #f0f0f0;
-			padding: 10px;
-			border: 1px solid #ddd;
-		}
-	</style>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-	<header>
-		<h1>The Shawshank Redemption</h1>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="#nav-actor">Actors</a></li>
-			<li><a href="#nav-quote">Quotes</a></li>
-		</ul>
-	</nav>
-	<summary id="summary">
-		<h2>Summary</h2>
-		<p>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
-	</summary>
-	<section id="actor">
-		<h2>Actors</h2>
-		<ul>
-			<li>Tim Robbins as Andy Dufresne</li>
-			<li>Morgan Freeman as Red</li>
-			<li>Bob Gunton as Warden Norton</li>
-		</ul>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+<header>
+	<h1>Inception</h1>
+</header>
+	<section>
+		<nav>
+			<a id="nav-actor"  href="#actor">Actors</a>
+			<a id="nav-quote"  href="#quote">Quotes</a>
+		</nav>
 	</section>
-	<section id="quote">
-		<h2>Quote</h2>
-		<p>"Get busy living, or get busy dying."</p>
-	</section>
-	<aside>
-		<h2>IMDb Rating: 9.2/10</h2>
-		<p>Release Date: September 23, 1994</p>
-	</aside>
-	<footer>
-		<p>Produced by: Frank Darabont</p>
-	</footer>
+	<div class="container">
+		<main>
+			<section>
+				<summary>
+				<h2>Summary</h2>
+			<p>  Inception is a science fiction thriller directed by Christopher Nolan. The movie follows Dom Cobb, a thief who possesses the power to enter people's dreams and steal their secrets from their subconscious. Cobb is offered a chance to have his criminal history erased as payment for the implantation of another person's idea into a target's subconscious. The film is renowned for its complex plot and stunning visual effects.</p>
+				</section>
+			</summary>
+			<section id="actor">
+				 <h2>Actors</h2>
+                <ul>
+                    <li>Leonardo DiCaprio as Dom Cobb</li>
+                    <li>Joseph Gordon-Levitt as Arthur</li>
+                    <li>Elliot Page as Ariadne</li>
+                    <li>Tom Hardy as Eames</li>
+                    <li>Ken Watanabe as Saito</li>
+                </ul>
+			</section>
+			<section id="quote">
+				<h2> Favorite Quote</h2>
+				<blockquote>
+					 "You mustn't be afraid to dream a little bigger, darling." - Eames
+                </blockquote>
+				</blockquote>
+			</section>
+		</main>
+		<aside>
+			<h2>Movie Info:</h2>
+			<p><strong>IMDb Rating:</strong> 8.8/10</p>
+			<p><strong>Release Date:</strong> July 16, 2010</p>
+		</aside>
+		<footer>
+			  Produced by: Emma Thomas
+		</footer>
+	</div>
+	
 </body>
+
 </html>
